--- a/closedverse_main/templates/closedverse_main/profile-settings.html
+++ b/closedverse_main/templates/closedverse_main/profile-settings.html
@@ -14,7 +14,7 @@
       </li>
       <li class="setting-profile-comment">
         <p class="settings-label">Profile comment</p>
-        <textarea class="textarea" name="profile_comment" maxlength="1000" placeholder="Write about yourself here.">{{ profile.comment }}</textarea>
+        <textarea class="textarea" name="profile_comment" maxlength="2200" placeholder="Write about yourself here.">{{ profile.comment }}</textarea>
 
         <p class="note">Anything you write here will appear on your profile. Remember to keep it brief. Please don't write anything that'll violate <a href="/help/rules">Closedverse's rules</a>.</p>
       </li>
@@ -61,12 +61,17 @@
         </div>
       </li>
 	  {% endif %}
+	  <!--
       <li class="setting-avatarsecond">
         <p class="settings-label">Nintendo Network ID (NNID)</p>
         <div class="center center-input">
 			<input type="text" name="origin_id" maxlength="16" placeholder="NNID" value="{{ user.origin_id }}">
 		</div>
-        <p class="note">You can </p>
+        <p class="note">You can enter a Nintendo Network ID here if it exists, and then it will be used as your avatar.
+		{% if user.origin_id %}
+		<br><a href="#" class="">Click here to clear your ID to use something else.</a></p>
+		{% else %}</p>
+		{% endif %}
       </li>
       <li class="setting-avatar">
         <p class="settings-label">Avatar</p>
@@ -75,7 +80,15 @@
 		</div>
         <p class="note">Todo: Either make this an upload or an NNID form</p>
       </li>
-
+	  -->
+	  <li class="setting-avatar">
+        <p class="settings-label">Avatar</p>
+        <div class="center center-input">
+			<input name="avatar" maxlength="255" placeholder="Avatar" value="{{ user.avatar }}">
+		</div>
+        <p class="note">This should be either a URL link to your avatar or the letters and numbers of a Mii URL (like "3oyie3zp1pdev"). This field will be replaced with a better one in the very near future.</p>
+      </li>
+	{% csrf_token %}
 	<div class="form-buttons">
 	<input type="submit" class="black-button apply-button" value="Save these settings">
 	</div>
