--- a/closedverse_main/templates/closedverse_main/user_yeahs.html
+++ b/closedverse_main/templates/closedverse_main/user_yeahs.html
@@ -4,7 +4,7 @@
 <div class="main-column"><div class="post-list-outline">
     <h2 class="label">{{ title }}</h2>
 
-{% u_post_list posts next %}
+{% u_post_list posts next 1 %}
 
 </div></div>
 {% endblock %}
