--- a/closedverse_main/templates/closedverse_main/elements/user-sidebar.html
+++ b/closedverse_main/templates/closedverse_main/elements/user-sidebar.html
@@ -1,4 +1,4 @@
-{% load closedverse_tags %}<div id="sidebar" class="user-sidebar">
+{% load closedverse_tags %}<div id="sidebar" class="{% if general %}general{% else %}user{% endif %}-sidebar">
   <div class="sidebar-container">
       
     <div id="sidebar-profile-body">
