--- a/closedverse_main/templates/closedverse_main/layout.html
+++ b/closedverse_main/templates/closedverse_main/layout.html
@@ -84,7 +84,7 @@
           <div class="link-container">
 			<p><a href="https://www.pf2m.com/openverse/">Openverse</a></p>
 			<p><a href="https://ariankordi.net/">My website</a></p>
-			<p><a href="https://github.com/ariankordi/closedverse" onclick="event.preventDefault(),alert('Todo at release: put this into a Github repo, but make sure to sanitize settings files first before sending')">Github</a></p>
+			<p><a href="https://github.com/ariankordi/closedverse">GitHub</a></p>
 			<p id="copyright"><a href="https://miiverse.nintendo.net/">Inspired by Hatena Co, Ltd/Nintendo's Miiverse.</a> I don't nor wish to money from this. Please support the original creators for what they do.<br>
 			<a href="https://getfedora.org/"><img class="fimg" src="https://i.imgur.com/KYUMjTN.png" alt="[ Powered by Fedora ]" width="88" height="31"></a></p>
 			</div>
