--- a/closedverse_main/templates/closedverse_main/notifications.html
+++ b/closedverse_main/templates/closedverse_main/notifications.html
@@ -1,6 +1,6 @@
 {% extends "closedverse_main/layout.html" %}
 {% block main-body %}{% load closedverse_tags %}{% load closedverse_user %}
-{% user_sidebar request user profile 0 True %}
+{% user_sidebar request user user.profile 0 True %}
 <div class="main-column">
   <div class="post-list-outline">
 
