--- a/static/closedverse.css
+++ b/static/closedverse.css
@@ -908,10 +908,15 @@ left: 10% !important;
 #global-menu #global-my-menu .my-menu-profile-setting:before {
   content: "Z";
 }
+#global-menu #global-my-menu .my-menu-white-power:before {
+  content: url(/s/img/font/wp.svg);
+  width: 20px;
+}
 #global-menu #global-my-menu .my-menu-miiverse-setting:before {
   content: "Y";
 }
-#global-menu #global-my-menu .my-menu-info:before {
+/*Not done yet*/
+#global-menu #global-my-menu .my-menu-openman:before {
   content: "w";
 }
 #global-menu #global-my-menu .my-menu-guide:before {
@@ -9577,11 +9582,15 @@ padding-bottom:10px;
   left: 0px;
   z-index: 2000;
   background: transparent url("https://splatoon.nintendo.net/assets/en/loading/@2x-se6335ab797-cb27d69f23a4d1112bc2a0d272538f39dd3017be20e5f2e3f4a460bd0071b68d.png") 0 0 no-repeat;
-  animation: l 0.36s steps(17) infinite;
+  animation: woomy 0.36s steps(17) infinite;
 }
-@keyframes l {
+@keyframes woomy {
   100% { background-position: 0 -1700px; }
 }
+#nprogress{pointer-events:none;}
+#nprogress .bar{background:linear-gradient(45deg, #322ff3, #b50096);position:fixed;z-index:1031;top:0;left:0;width:100%;height:4px;}
+#nprogress .peg{display:block;position:absolute;right:0px;width:100px;height:100%;box-shadow:0 0 10px #b50096,0 0 4px #b50096;opacity:1.0;-webkit-transform:rotate(3deg) translate(0px,-4px);-ms-transform:rotate(3deg) translate(0px,-4px);transform:rotate(3deg) translate(0px,-4px);}
+.nprogress-custom-parent{overflow:hidden;position:relative;}.nprogress-custom-parent #nprogress .spinner,.nprogress-custom-parent #nprogress .bar{position:absolute;}
 
 
 
